<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_propeller_plugins</name>
  <version>0.1.0</version>
  <description>This package is the gazebo propeller simulation plugin</description>
  <maintainer email="zzh_robotic@163.com">hari</maintainer>
  <license>MIT License</license>

  <build_depend>gazebo_dev</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
